--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,4 @@ faiss-cpu==1.7.4
 pymupdf==1.23.8
 pymupdf4llm==0.1.4
 kiwipiepy==0.16.2
-python-dotenv==1.0.0
-pydantic==2.5.2
+python-dotenv==1.0.0pydantic==2.5.2
