--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 streamlit==1.31.0
-langchain==0.1.0
 langchain-openai==0.0.5
 langchain-community==0.0.13
 langchain-core==0.1.12
-openai==1.12.0
 faiss-cpu==1.7.4
-pymupdf==1.23.8
-pymupdf4llm==0.1.4
-kiwipiepy==0.16.2
-python-dotenv==1.0.0pydantic==2.5.2
+python-dotenv==1.0.0
