--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.31.0
-langchain-openai==0.0.8
-langchain-community==0.0.13
-langchain-core>=0.1.16
-faiss-cpu==1.7.4
-python-dotenv==1.0.0
+streamlit
+langchain-openai
+langchain-community
+langchain-core
+faiss-cpu
+python-dotenv
